--- a/myshop/pubspec.yaml
+++ b/myshop/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   provider: ^6.0.3
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.5  
+  shared_preferences: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - .env
 
   fonts:
     - family: Lato
